Fix cards layout on mobile

--- a/version_control/katalyst_by_codurance/css/modules/testimonial.css
+++ b/version_control/katalyst_by_codurance/css/modules/testimonial.css
@@ -39,6 +39,7 @@
     .testimonials-wrapper {
         overflow: scroll;
         scroll-snap-type: x mandatory;
+        padding-bottom: var(--space-xs);
         padding-right: var(--space-s);
         margin-left: var(--space-s);
         max-width: initial;
